[tool.poetry]
name = "hypothesis_testing"
version = "0.1.0"
description = ""
authors = ["rafaelymz <mingzhi2@alumni.cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
hyppo = "^0.2.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
